err/shimehari.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/Shimehari-0.1.12.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/shimehari'...
Compiling './lib/python3.5/site-packages/shimehari/app.py'...
***   File "./lib/python3.5/site-packages/shimehari/app.py", line 328
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/shimehari/contexts.py'...
***   File "./lib/python3.5/site-packages/shimehari/contexts.py", line 158
    except HTTPException, e:
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/shimehari/core'...
Compiling './lib/python3.5/site-packages/shimehari/core/cachestore.py'...
***   File "./lib/python3.5/site-packages/shimehari/core/cachestore.py", line 18
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/shimehari/core/conf'...
Listing './lib/python3.5/site-packages/shimehari/core/conf/app_template'...
Listing './lib/python3.5/site-packages/shimehari/core/conf/app_template/controllers'...
Listing './lib/python3.5/site-packages/shimehari/core/conf/app_template/models'...
Compiling './lib/python3.5/site-packages/shimehari/core/helpers.py'...
***   File "./lib/python3.5/site-packages/shimehari/core/helpers.py", line 42
    except ImportError, error:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/shimehari/core/manage'...
Compiling './lib/python3.5/site-packages/shimehari/core/manage/AbstractCommand.py'...
***   File "./lib/python3.5/site-packages/shimehari/core/manage/AbstractCommand.py", line 63
    except (TypeError, CommandError, DrinkError), e:
                                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/shimehari/core/manage/commands'...
Compiling './lib/python3.5/site-packages/shimehari/core/manage/commands/create.py'...
***   File "./lib/python3.5/site-packages/shimehari/core/manage/commands/create.py", line 68
    except OSError, error:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/shimehari/core/manage/commands/drink.py'...
***   File "./lib/python3.5/site-packages/shimehari/core/manage/commands/drink.py", line 48
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/shimehari/core/manage/commands/generate.py'...
***   File "./lib/python3.5/site-packages/shimehari/core/manage/commands/generate.py", line 115
    except (IOError, OSError), e:
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/shimehari/core/manage/commands/routes.py'...
***   File "./lib/python3.5/site-packages/shimehari/core/manage/commands/routes.py", line 39
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/shimehari/helpers.py'...
***   File "./lib/python3.5/site-packages/shimehari/helpers.py", line 134
    except BuildError, error:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/shimehari/routing.py'...
***   File "./lib/python3.5/site-packages/shimehari/routing.py", line 395
    print self._rules
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/shimehari/session.py'...
***   File "./lib/python3.5/site-packages/shimehari/session.py", line 288
    except (Exception, RuntimeError), e:
                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/shimehari/template'...
Listing './lib/python3.5/site-packages/shimehari/template/jinja2'...
Compiling './lib/python3.5/site-packages/shimehari/wrappers.py'...
***   File "./lib/python3.5/site-packages/shimehari/wrappers.py", line 42
    except ValueError, error:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './share'...
Listing './share/python-wheels'...
